<resources>
    <string name="app_name">Dentifycare</string>
    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_profile">Profile</string>
    <string name="title_intro_1">Find Patients Easily</string>
    <string name="title_intro_2">Save on Dental Care Costs</string>
    <string name="title_intro_3">Smart Analysis with AI</string>
    <string name="desc_intro_1">Help dental co-ed students find patients who fit clinical needs</string>
    <string name="desc_intro_2">Get affordable dental care while supporting student education</string>
    <string name="desc_intro_3">Our AI feature lets patients quickly and accurately scan dental conditions. Based on the analysis, it recommends suitable dental cosmetology students, ensuring efficient and reliable care</string>
    <string name="next">Next</string>
    <string name="start">Get Started</string>
    <string name="example_name">Maryono Saputra</string>
    <string name="patient">Patient</string>
    <string name="change_information">Change Information</string>
    <string name="app_settings">App Settings</string>
    <string name="log_out">Log Out</string>
    <string name="new_your_name">New Your Name</string>
    <string name="new_whatsapp_number">New WhatsApp Number</string>
    <string name="update">Update</string>
    <string name="example_hospital">RS JIH Yogyakarta</string>
    <string name="example_name_coass">Elina Sitorus</string>
    <string name="complete">Complete</string>
    <string name="header_news">Health News For You</string>
    <string name="example_name_title_news">Types of Dental</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor woandle aselole anoying andelumut lorem </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_activity_here">Your Activity Here</string>
    <string name="your_ordered_successed">Your Ordered Successed</string>
    <string name="your_name">Your Name :</string>
    <string name="your_phone">Your Phone :</string>
    <string name="example_phone">+62 8123456789</string>
    <string name="your_coass">Your CoAss :</string>
    <string name="hospital">Hospital :</string>
    <string name="diagnosis">Diagnosis :</string>
    <string name="tooth_discoloration">Tooth Discoloration</string>
    <string name="booking_dated">Booking Dated :</string>
    <string name="example_date">December 07, 2024</string>
    <string name="booking_hours">Booking Hours:</string>
    <string name="example_hours">08:30 - 10:30</string>
    <string name="example_hours_2">12:30 - 14:30</string>
    <string name="example_hours_3">14:30 - 16:30</string>
    <string name="your_queue">Your Queue :</string>
    <string name="example_queue">7</string>
    <string name="confirmation_now">Confirmation Now</string>
    <string name="example_rate">4.6 / 5</string>
    <string name="provide_your_feedback_below">Provide Your Feedback Below</string>
    <string name="submit">Submit</string>
    <string name="your_post">Your Post</string>
    <string name="additional_information">Additional Information</string>
    <string name="example_information_co_ass">I am a dental clinical student from the Faculty of Dentistry, Universitas Indonesia, one of the leading universities in Indonesia. Currently, I am undergoing clinical training that involves various dental care cases under the direct supervision of experienced lecturers. With a strong passion for learning and a genuine care for my patients, I am well-trained in conducting examinations, diagnoses, and treatments using safe, modern methods.
    </string>
    <string name="operational_date">Operational Date</string>
    <string name="operational_hours">Operational Hours</string>
    <string name="remaining_quota">Remaining Quota :</string>
    <string name="quota">Quota :</string>
    <string name="your_patient_today">Your Patient Today</string>
    <string name="example_number">1</string>
    <string name="new_post">New Post</string>
    <string name="your_name_hint">Your Name</string>
    <string name="your_hospital">Your Hospital</string>
    <string name="city_name">City Name</string>
    <string name="province_name">Province Name</string>
    <string name="special_skill">Special Skills</string>
    <string name="carries">Carries</string>
    <string name="calculus">Calculus</string>
    <string name="ulcers">Mouth Ulcer</string>
    <string name="hypodontia">Hypodontia</string>
    <string name="gingivitis">Gingivitis</string>
    <string name="quota_hint">Quota</string>
    <string name="welcome">Welcome,</string>
    <string name="your_ai_powered_dental_analysis_is_ready">Your AI-powered dental analysis is ready.</string>
    <string name="desc_detect_model">Detect issues with accuracy and get personalized dental care treatment.</string>
    <string name="try_now">Try Now</string>
    <string name="desc_news">Explore the dental health news.</string>
    <string name="read_news">Read News</string>
    <string name="ai_analyze_for_you">AI Analyze For You</string>
    <string name="upload">Upload</string>
    <string name="analyze">Analyze</string>
    <string name="ai_analysis_result">AI Analysis Result</string>
    <string name="example_acuracy">98%</string>
    <string name="acuracy_level">Acuracy Level :</string>
    <string name="add_your_information">Add Your Information</string>
    <string name="service_unavailable">Service Unavailable</string>
    <string name="message_not_found">We’re sorry, service for your issue is not available right now. Please try again soon!</string>
    <string name="back_to_home">Back To Home</string>
    <string name="choose_your_dental_recommendations">Choose Your Dental Recommendations</string>
    <string name="separator">|</string>
    <string name="booked_now">Book Now</string>
    <string name="your_order_confirmation">Your Order Confirmation</string>
    <string name="desc_login">Enter your email and password to access your account</string>
    <string name="hello_again">Hello Again!</string>
    <string name="new_to_dentify_care">New to Dentify Care?</string>
    <string name="register_with">Register with </string>
    <string name="google_account">Google Account</string>
    <string name="detail_account">Detail Account</string>
    <string name="desc_detail">Sign up now for affordable dental care, find patients, and solve your dental problems!</string>
    <string name="name">Name</string>
    <string name="whatsapp_number">Whatsapp Number</string>
    <string name="choose_your_role">Choose Your Role</string>
    <string name="fill_your_data">Fill Your Data</string>
    <string name="complete_your_data_information">Complete your data information</string>
    <string name="university">University</string>
    <string name="semester">Semester</string>
    <string name="student_id_number">Student ID Number</string>
    <string name="co_ass">Co Ass</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="choose_options">Choose Options</string>
    <string name="no_gallery">No image selected</string>
    <string name="no_image">No images are recorded</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="now_to_dentifycare">Now to Dentifycare?</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="no_image_selected">No images selected</string>
    <string name="crop_failed">Crop failed, please try again</string>
    <string name="go_home_page">Go Home Page</string>
</resources>