<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_home"
        android:title="@string/title_home"
        android:icon="@drawable/icon_home"
        android:background="@color/md_theme_secondaryContainer"
        android:textColor="@color/md_theme_primary" />
    <item
        android:id="@+id/navigation_activity"
        android:title="@string/title_activity"
        android:icon="@drawable/icon_activity"
        android:background="@color/md_theme_secondaryContainer"
        android:textColor="@color/md_theme_primary" />
    <item
        android:id="@+id/navigation_profile"
        android:title="@string/title_profile"
        android:icon="@drawable/icon_profile"
        android:background="@color/md_theme_secondaryContainer"
        android:textColor="@color/md_theme_primary" />
</menu>