<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.booked.ConfirmationAcceptedActivity">

    <TextView
        android:id="@+id/tv_your_order_accepted"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/your_ordered_successed"
        android:textAlignment="center"
        android:textColor="@color/black_color"
        android:textSize="30sp"
        android:layout_marginTop="50dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_check"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/checklist_accepted"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_your_order_accepted" />

    <TextView
        android:id="@+id/your_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_check"/>

    <TextView
        android:id="@+id/name_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_name"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_name"/>

    <TextView
        android:id="@+id/your_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_phone"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_order"/>

    <TextView
        android:id="@+id/phone_order"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_phone"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_phone"/>

    <TextView
        android:id="@+id/your_co_ass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_coass"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/phone_order"/>

    <TextView
        android:id="@+id/co_ass_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_name_coass"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_co_ass"/>

    <TextView
        android:id="@+id/your_hospital"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hospital"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/co_ass_name"/>

    <TextView
        android:id="@+id/hospital_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_hospital"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_hospital"/>

    <TextView
        android:id="@+id/your_diagnosis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/diagnosis"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hospital_name"/>

    <TextView
        android:id="@+id/diagnosis_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tooth_discoloration"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_diagnosis"/>

    <TextView
        android:id="@+id/your_booking_dated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/booking_dated"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/diagnosis_name"/>

    <TextView
        android:id="@+id/booking_dated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_date"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_booking_dated"/>

    <TextView
        android:id="@+id/your_booking_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/booking_hours"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/booking_dated"/>

    <TextView
        android:id="@+id/booking_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_hours"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_booking_hours"/>

    <TextView
        android:id="@+id/your_queue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_queue"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/booking_hours"/>

    <TextView
        android:id="@+id/queue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_queue"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_queue"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_confirmation_now"
        android:background="@drawable/button_shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/dentifycare_main_color"
        android:textColor="@color/white_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textStyle="bold"
        android:text="@string/confirmation_now"/>
</androidx.constraintlayout.widget.ConstraintLayout>