<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.coass.DeleteActivity">

    <TextView
        android:id="@+id/your_post"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/your_post"
        android:textAlignment="center"
        android:textColor="@color/black_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_co_ass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/example_name_coass"
        android:layout_marginStart="40dp"
        android:textColor="@color/black_color"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/your_post" />

    <TextView
        android:id="@+id/tv_title_hospital"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_hospital"
        android:textColor="@color/black_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_name_co_ass"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_co_ass" />

    <TextView
        android:id="@+id/tv_skill"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/tooth_discoloration"
        android:textColor="@color/dentifycare_main_color"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@id/tv_title_hospital"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_hospital" />


    <ImageView
        android:id="@+id/img_star"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginEnd="6dp"
        android:src="@drawable/star_image"
        app:layout_constraintBottom_toBottomOf="@+id/tv_title_hospital"
        app:layout_constraintEnd_toStartOf="@id/rating_co_ass"
        app:layout_constraintTop_toTopOf="@+id/tv_name_co_ass" />

    <TextView
        android:id="@+id/rating_co_ass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_rate"
        android:textColor="@color/black_color"
        android:layout_marginEnd="40dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_star"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/img_star"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/additional_information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/additional_information"
        android:textColor="@color/black_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tv_skill"
        app:layout_constraintStart_toStartOf="@id/tv_skill"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/additional_information_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/example_information_co_ass"
        android:textColor="@color/black_color"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"
        android:justificationMode="inter_word"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        app:layout_constraintTop_toBottomOf="@id/additional_information"
        tools:targetApi="o" />

    <TextView
        android:id="@+id/your_booking_dated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operational_date"
        android:textSize="20sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="40dp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/additional_information_value"/>

    <TextView
        android:id="@+id/booking_dated"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_date"
        android:textSize="16sp"
        android:textColor="@color/black_color"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_booking_dated"/>

    <TextView
        android:id="@+id/your_booking_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/operational_hours"
        android:textSize="20sp"
        android:textColor="@color/black_color"
        android:textStyle="bold"
        android:layout_marginStart="40dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/booking_dated"/>

    <TextView
        android:id="@+id/booking_hours"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/example_hours"
        android:textColor="@color/black_color"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/your_booking_hours" />

    <TextView
        android:id="@+id/remaining_quota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remaining_quota"
        android:textColor="@color/black_color"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@id/booking_hours"
        app:layout_constraintTop_toBottomOf="@id/booking_hours"/>

    <TextView
        android:id="@+id/remaining_quota_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_queue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:textColor="@color/black_color"
        app:layout_constraintStart_toEndOf="@id/remaining_quota"
        app:layout_constraintTop_toTopOf="@id/remaining_quota"
        app:layout_constraintBottom_toBottomOf="@id/remaining_quota"/>

    <TextView
        android:id="@+id/your_full_quota"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/quota"
        android:textColor="@color/black_color"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/remaining_quota"
        app:layout_constraintTop_toBottomOf="@id/remaining_quota" />

    <TextView
        android:id="@+id/quota_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/example_queue"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="10dp"
        android:textColor="@color/black_color"
        app:layout_constraintStart_toEndOf="@id/your_full_quota"
        app:layout_constraintTop_toTopOf="@id/your_full_quota"
        app:layout_constraintBottom_toBottomOf="@id/your_full_quota"/>

</androidx.constraintlayout.widget.ConstraintLayout>