<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="4dp"
    android:layout_marginBottom="15dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_gravity="center">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/profile_default"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/example_name_coass"
            android:textColor="@color/black_color"
            android:textSize="24sp"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            card_view:layout_constraintStart_toEndOf="@+id/img_profile"
            card_view:layout_constraintTop_toTopOf="@+id/img_profile" />


        <TextView
            android:id="@+id/tv_hospital_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black_color"
            android:text="@string/example_hospital"
            card_view:layout_constraintStart_toStartOf="@+id/tv_name"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_name" />

        <TextView
            android:id="@+id/tv_hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black_color"
            android:text="@string/example_hours"
            card_view:layout_constraintStart_toStartOf="@+id/tv_hospital_title"
            card_view:layout_constraintTop_toBottomOf="@+id/tv_hospital_title" />

        <TextView
            android:id="@+id/tv_separator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/black_color"
            android:text="@string/separator"
            card_view:layout_constraintStart_toEndOf="@+id/tv_hours"
            card_view:layout_constraintTop_toTopOf="@+id/tv_hours"
            card_view:layout_constraintBottom_toBottomOf="@id/tv_hours"/>

        <TextView
            android:id="@+id/tv_dated"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/example_date"
            android:textColor="@color/black_color"
            card_view:layout_constraintBottom_toBottomOf="@id/tv_separator"
            card_view:layout_constraintStart_toEndOf="@+id/tv_separator"
            card_view:layout_constraintTop_toTopOf="@+id/tv_separator" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>