<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.analyze.AnalyzeNotFoundActivity">

    <ImageView
        android:id="@+id/img_not_found"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="150dp"
        android:src="@drawable/notfound_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/service_unavailable"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/service_unavailable"
        app:layout_constraintEnd_toEndOf="@+id/img_not_found"
        app:layout_constraintStart_toStartOf="@+id/img_not_found"
        app:layout_constraintTop_toBottomOf="@id/img_not_found"
        android:layout_marginTop="25dp"
        android:textColor="@color/black_color"
        android:textStyle="bold"
        android:textSize="25sp"/>

    <TextView
        android:id="@+id/tv_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/message_not_found"
        app:layout_constraintEnd_toEndOf="@+id/service_unavailable"
        app:layout_constraintStart_toStartOf="@+id/service_unavailable"
        app:layout_constraintTop_toBottomOf="@id/service_unavailable"
        android:layout_marginTop="15dp"
        android:textColor="@color/black_color"
        android:textAlignment="center"
        android:textSize="16sp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_logout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/dentifycare_main_color"
        android:text="@string/back_to_home"
        android:textAllCaps="false"
        android:textColor="@color/white_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message" />

</androidx.constraintlayout.widget.ConstraintLayout>